--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group mat-stretch-tabs class="mat-elevation-z4" fxFill>
       <mat-tab label="All products">
           <div fxLayout="column" fxLayoutAlign="space-around stretch" style="padding: 20px; background: #f0f0f0">
-            <form [formGroup]="productForm" fxLayout="row" fxLayoutAlign="space-around stretch" #f>
+            <form [formGroup]="productForm" (ngSubmit)="onSubmit()" fxLayout="row" fxLayoutAlign="space-around stretch" #f>
                 <mat-form-field fxFlex="40">
                     <input matInput placeholder="Product name"  formControlName='name' #name>
                 </mat-form-field>
